Fri Feb 13 15:22:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Big_Reply/Test.idl:
        * tests/Bug_3430_Regression/Bug_3430_Regression.mpc:
        * tests/ZIOP/client.cpp:
        * tests/ZIOP/Hello.cpp:
        * tests/ZIOP/Hello.h:
        * tests/ZIOP/run_test.pl:
        * tests/ZIOP/server.cpp:
        * tests/ZIOP/Test.idl:
        * tests/ZIOP/ZIOP.mpc:
          Updated to meet the latest ZIOP changes (see previous
          commits).

Fri Feb 13 15:17:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.cpp
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Transport.cpp
        * tao/GIOP_Message_Base.cpp
        * tao/GIOP_Message_Base.h
        * tao/IIOP_Transport.cpp
        * tao/Strategies/DIOP_Transport.cpp
        * tao/Strategies/SCIOP_Transport.cpp
        * tao/Strategies/SHMIOP_Transport.cpp
        * tao/Strategies/UIOP_Transport.cpp
        * tao/Synch_Invocation.cpp
        * tao/Synch_Reply_Dispatcher.cpp
        * tao/Transport.cpp
        * tao/Transport.h
          Pass the stub as pointer, it could be zero

Fri Feb 13 15:04:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Base.h:
          Fixed compile problem when ZIOP is not enabled

Fri Feb 13 14:35:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        Implementation of the ZIOP Beta 1 spec

        * tao/CDR.cpp:
        * tao/CDR.h:
        * tao/CDR.inl:
        * tao/Messaging/Asynch_Invocation.cpp:
        * tao/TAO_Server_Request.cpp:
          Removed obsolete compression flag.

        * tao/Compression/zlib/ZlibCompressor.cpp:
        * tao/Compression/bzip2/Bzip2Compressor.cpp:
        * tao/Compression/Compression.pidl:
          Added description to Compression exception in order to
          meet the ZIOP Beta 1 specification

        * tao/Compression/Compression_Manager.cpp: