@@ -1,3 +1,8 @@
+Fri Feb 13 15:37:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/GIOP_Message_Base.cpp:
+          Unicode fix and removed not needed variable
+
 Fri Feb 13 15:22:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/Big_Reply/Test.idl:
